<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg">

    <View
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_for_slider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoriesFragment"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/text_color_primary"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:singleSelection="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPolitics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/economy"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTechnologies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technologies"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport"
            style="@style/chipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCulture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culture"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            style="@style/chipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipScience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cars"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSociety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/society"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
            style="@style/chipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipIncidents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incidents"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            style="@style/chipStyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            style="@style/chipStyle" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>