<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg">

    <View
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_for_slider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/qanelas_medium"
        android:text="@string/choose_theme"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_selector_bg"
            android:button="@drawable/radio_button_selector"
            android:drawableEnd="@drawable/ic_sun"
            android:drawablePadding="10dp"
            android:fontFamily="@font/qanelas_medium"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:text="@string/light_mode"
            android:textSize="16sp"
            app:buttonTint="@color/primary_color" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/radio_button_selector_bg"
            android:button="@drawable/radio_button_selector"
            android:checked="true"
            android:drawableEnd="@drawable/ic_moon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/qanelas_medium"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:text="@string/dark_mode"
            android:textSize="16sp"
            app:buttonTint="@color/primary_color" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/radio_button_selector_bg"
            android:button="@drawable/radio_button_selector"
            android:drawableEnd="@drawable/ic_device_theme"
            android:drawablePadding="10dp"
            android:fontFamily="@font/qanelas_medium"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:text="@string/system_default"
            android:textSize="16sp"
            app:buttonTint="@color/primary_color" />

    </RadioGroup>

</LinearLayout>