<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_for_slider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/qanelas_medium"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@color/item_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:padding="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_selector_bg"
            android:button="@drawable/radio_button_selector"
            app:buttonTint="@color/primary_color"
            android:drawableEnd="@drawable/ic_usa"
            android:drawablePadding="10dp"
            android:fontFamily="@font/qanelas_medium"
            android:layoutDirection="rtl"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_selector_bg"
            android:button="@drawable/radio_button_selector"
            app:buttonTint="@color/primary_color"
            android:drawableEnd="@drawable/ic_rus"
            android:drawablePadding="10dp"
            android:fontFamily="@font/qanelas_medium"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/russian"
            android:checked="true"
            android:layout_marginTop="5dp"/>

    </RadioGroup>

</LinearLayout>