<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/rounded_corner_all"
    android:backgroundTint="@color/item_color_primary"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/qanelas_medium"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        android:text="@string/delete_items_confirmation"
        app:layout_constraintEnd_toEndOf="@+id/imageViewIcon"
        app:layout_constraintStart_toStartOf="@+id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/buttonNo"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/primary_color"
            android:textSize="20sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color" />

        <TextView
            android:id="@+id/buttonYes"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/primary_color"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
